
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
    56: AstroFloyd, 17/11/2009
      - updated/changed NRF functions to put online
      - added copyright labels
      - made compatible with gfortran-4.4
      - updated Makefiles
    
    54: AstroFloyd, 27/10/2009
      - made routines compatible with gfortran 4.3
      - added plotpltp.f
      - some f77->f90 notation conversion
    
    52: AstroFloyd, 03/07/2009
      - Read homedir from environment variable $HOME using getenv()
    
    51: AstroFloyd, 01/07/2009
      - ~/bin/lib/ -> ~/usr/lib/
    
    48: AstroFloyd, 22/05/2009
      - plotplt(n): read input files unformatted
      - plotpltn (hardcoded in plotpltn.f):
        - use custom colours (ncolours/colours() array)
	- switch 'legend' on/off (prlegend)
      
    46: AstroFloyd, 19/05/2009
      - plotmdl: started implementation of Ubind
      - plotplt: fixed bug in plotting which structure models were saved
      - functions: added indexx (real/dble), bin_data_1d and time_stamp (for phist)
		   added polint (d) for gw_evolve
    
    29: AstroFloyd, 05/03/2009
      - plotmdl: 
        - added secondary variables mu, n, P_rad, P_gas, beta=P_rad/P_gas
	      
    28: AstroFloyd, 03/03/2009
      - added q_qrit and m_2,crit (for dynamical MT) to plotplt
      
    25: AstroFloyd, 24/02/2009
      - take into account fully convective state when computing MB
      - added hardcoded parameter ncolours to plotpln.f
      
    19: AstroFloyd, 17/02/2009
      - fixed autoupdate function in plotplt now that pgopen is used
      - fixed chosing 'zoom in' after eps file was written in plotplt(n)
      
    17: AstroFloyd, 13/02/2009
      added lambda_env to plotplt(n)
	
    14: AstroFloyd, 11/02/2009
       plotplt:
        - add lambda_ce
	- open next xwin if first is in use
	    
     2: AstroFloyd, 16/01/2009